src/test/deca/syntax/valid/LE/testThis2.deca
//test pour les classes
//test du this.

class C1 {
    int a ;

    void c1 (int a) {
        this.a = a ;
    }
}

{
    C1 var ;
    var.c1(3) ;
}