src/test/deca/syntax/invalid/LE/MethSansTypeRenvoie.deca
//test invalide
//methode sans type de retour

class C1 {
    int a ;

     (int b) {
        a = b ;
    }
}